refactor: Improve code homogeneity and production readiness
Backend improvements:
- Add ClaudeAPIException handler (503 Service Unavailable)
- Add RateLimitExceededException handler (429 Too Many Requests)
- Make CORS origins configurable via application.properties
- Make AI rate limits configurable (ai.requests.per-user-per-day)
- Add logging for CORS configuration
- Update RateLimitService to use @Value injection

Frontend improvements:
- Remove console.log statements from analyticsUtils.ts
- Add JSDoc documentation to utility functions
- Improve code professionalism and production readiness

Configuration:
- Add cors.allowed-origins property with default localhost:5173
- Support comma-separated origins for multi-environment deployment
- Maintain backward compatibility with existing setups

These changes improve:
✅ Error handling consistency (proper HTTP status codes)
✅ Configuration flexibility (externalized settings)
✅ Production readiness (removed debug logs)
✅ Code documentation (added JSDoc comments)
✅ Senior-level code quality and maintainability